AB#19859 BE: Move EntityFrameworkPlus into NuGet package
* create package

AB#19110

--- a/src/Z.EntityFramework.Plus.EFCore3x.NETStandard21/Z.EntityFramework.Plus.EFCore3x.NETStandard21.csproj
+++ b/src/Z.EntityFramework.Plus.EFCore3x.NETStandard21/Z.EntityFramework.Plus.EFCore3x.NETStandard21.csproj
@@ -13,11 +13,13 @@
     <RootNamespace>Z.EntityFramework.Plus.EFCore.NETStandard21</RootNamespace>
     <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>zzzproject.pfx</AssemblyOriginatorKeyFile>
-    <PackageId>Z.EntityFramework.Plus.EFCore</PackageId>
+    <PackageId>Interfirt.Z.EntityFramework.Plus.EFCore</PackageId>
     <Version>3.0.40</Version>
     <Authors>Z.EntityFramework.Plus.EFCore</Authors>
     <Company>Z.EntityFramework.Plus.EFCore</Company>
     <Product>Z.EntityFramework.Plus.EFCore</Product>
+    <RepositoryUrl>https://github.com/Interfirst/EntityFramework-Plus.git</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/Interfirst/EntityFramework-Plus.git</PackageProjectUrl>
     <Description>Description: EF Bulk Operations &amp; Utilities | Bulk Insert, Update, Delete, Merge from database.</Description>
   </PropertyGroup>
 
