AB#19859 BE: Move EntityFrameworkPlus into NuGet package
* set package id

AB#19110

--- a/src/Z.EntityFramework.Plus.EFCore3x.NETStandard21/Z.EntityFramework.Plus.EFCore3x.NETStandard21.nuspec
+++ b/src/Z.EntityFramework.Plus.EFCore3x.NETStandard21/Z.EntityFramework.Plus.EFCore3x.NETStandard21.nuspec
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package>
   <metadata>
-    <id>$id$</id>
+    <id>Interfirt.Z.EntityFramework.Plus.EFCore</id>
     <version>$version$</version>
     <title>$title$</title>
     <authors>$authors$</authors>
