--- a/src/Z.EntityFramework.Plus.EFCore3x.NETStandard21/Z.EntityFramework.Plus.EFCore3x.NETStandard21.csproj
+++ b/src/Z.EntityFramework.Plus.EFCore3x.NETStandard21/Z.EntityFramework.Plus.EFCore3x.NETStandard21.csproj
@@ -14,12 +14,13 @@
     <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>zzzproject.pfx</AssemblyOriginatorKeyFile>
     <PackageId>Interfirt.Skynet.Z.EntityFramework.Plus.EFCore</PackageId>
-    <Version>3.0.40</Version>
+    <Version>39.0.0</Version>
     <Authors>Z.EntityFramework.Plus.EFCore</Authors>
     <Company>Z.EntityFramework.Plus.EFCore</Company>
     <Product>Z.EntityFramework.Plus.EFCore</Product>
     <RepositoryUrl>https://github.com/Interfirst/EntityFramework-Plus.git</RepositoryUrl>
     <PackageProjectUrl>https://github.com/Interfirst/EntityFramework-Plus.git</PackageProjectUrl>
+    <PackageReleaseNotes>Version 3.0.40</PackageReleaseNotes>
     <Description>Description: EF Bulk Operations &amp; Utilities | Bulk Insert, Update, Delete, Merge from database.</Description>
   </PropertyGroup>
 
