Add ef6 nuget package

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,5 +17,7 @@ steps:
 
 - script: dotnet build src\Z.EntityFramework.Plus.EFCore3x.NETStandard21\Z.EntityFramework.Plus.EFCore3x.NETStandard21.csproj -c Release
 - script: nuget pack src\Z.EntityFramework.Plus.EFCore3x.NETStandard21\Z.EntityFramework.Plus.EFCore3x.NETStandard21.csproj -Properties Configuration=Release
+- script: dotnet build src\Z.EntityFramework.Plus.EFCore6x\Z.EntityFramework.Plus.EFCore6x.csproj -c Release
+- script: nuget pack src\Z.EntityFramework.Plus.EFCore6x\Z.EntityFramework.Plus.EFCore6x.csproj -Properties Configuration=Release
 
 - script: nuget push *.nupkg -Source "https://pkgs.dev.azure.com/Interfirst-DevOps/SkyNet/_packaging/NuGet-feed/nuget/v3/index.json" -ApiKey AZ -SkipDuplicate
