--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,9 +15,7 @@ steps:
 - task: NuGetAuthenticate@1
   displayName: Auth NuGet packages
 
-- script: dotnet build src\Z.EntityFramework.Plus.EFCore3x.NETStandard21\Z.EntityFramework.Plus.EFCore3x.NETStandard21.csproj -c Release
-- script: nuget pack src\Z.EntityFramework.Plus.EFCore3x.NETStandard21\Z.EntityFramework.Plus.EFCore3x.NETStandard21.csproj -Properties Configuration=Release
-- script: dotnet build src\Z.EntityFramework.Plus.EFCore6x\Z.EntityFramework.Plus.EFCore6x.csproj -c Release
-- script: nuget pack src\Z.EntityFramework.Plus.EFCore6x\Z.EntityFramework.Plus.EFCore6x.csproj -Properties Configuration=Release
+- script: dotnet pack src\Z.EntityFramework.Plus.EFCore3x.NETStandard21\Z.EntityFramework.Plus.EFCore3x.NETStandard21.csproj --configuration Release --output nupkgs
+- script: dotnet pack src\Z.EntityFramework.Plus.EFCore6x\Z.EntityFramework.Plus.EFCore6x.csproj --configuration Release --output nupkgs
 
 - script: nuget push *.nupkg -Source "https://pkgs.dev.azure.com/LenderDevOps/SkyNet/_packaging/NuGet-feed/nuget/v3/index.json" -ApiKey AZ -SkipDuplicate
